--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@use "tailwindcss";
+@theme {
+    --color-purple: #42446E;
+}
+@plugin "daisyui" {
+    themes: light, dark;
+}
